2006-01-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/command/commands.py:
	* flumotion/admin/command/main.py:
	  add an 'invoke' command
	  sample use:
	   bin/flumotion-command invoke "/default/http-audio" rotateLog
	* flumotion/component/consumers/httpstreamer/http.py:
	  add a remote_rotateLog() method
	* flumotion/component/consumers/httpstreamer/resources.py:
	  privatize log file bits
	  implement rotating the log

2006-01-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/component.py:
	  BaseComponent.addMessage(): to add messages to the state
	* flumotion/worker/checks/Makefile.am:
	* flumotion/worker/checks/package.xml:
	* flumotion/worker/checks/encoder.py:
	  add checks for Theora and Vorbis
	* flumotion/component/encoders/theora/theora.py:
	* flumotion/component/encoders/theora/theora.xml:
	* flumotion/component/encoders/vorbis/vorbis.xml:
	* flumotion/component/encoders/vorbis/vorbis010.py:
	  run theora and vorbis checks in do_check
	* flumotion/wizard/steps.py:
	  use checks for Theora and Vorbis
	* flumotion/wizard/wizard.py:
	  add some debug
	  make sure the deferred from require is returned

2006-01-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/launch/main.py:
	  update to match the new protocol

2006-01-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	  blacklist gstreamer.py because we don't want to split out for
	  0.8 and 0.10 just for pychecker
	* flumotion/worker/checks/video010.py:
	  add a state= to do_element_check() to compare with the 08 version

2006-01-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* doc/random/component-initialization-protocol:
	  update protocol, add check method, make do_ methods
	* flumotion/component/bouncers/htpasswdcrypt.py:
	  setup -> do_setup()
	* flumotion/component/feedcomponent.py:
	* flumotion/component/feedcomponent010.py:
	* flumotion/component/feedcomponent08.py: